<resources>
    <!-- Navigation-Bar -->
    <string name="openNav">Open Navigation</string>
    <string name="closeNav">Close Navigation</string>
    <string name="app_name">Finances</string>
    <string name="nav_username_default">Unknown User</string>
    <string name="nav_text">Navigation</string>
    <string name="nav_account_status">Account Balance</string>
    <string name="nav_transaction_history">Transaction History</string>
    <string name="nav_transaction_add">New Transaction</string>
    <string name="nav_account_add">Create Account</string>
    <string name="settings">Settings</string>

    <!-- Main-Content -->
    <string name="finances_title">Title</string>
    <string name="finances_category">Category</string>
    <string name="finances_account">Account</string>
    <string name="finances_notes">Additional Information</string>
    <string name="finances_add_button">Ok</string>
    <string name="finances_abort_button">Abort</string>
    <string name="finances_currency">€</string>
    <string-array name="finances_type">
        <item>@string/type_spend</item>
        <item>@string/type_earned</item>
    </string-array>
    <string name="type_spend">Spend</string>
    <string name="type_earned">Earned</string>

    <!-- Date-Activity -->
    <string name="date_ok_button">OK</string>
    <string name="date_abort_button">ABORT</string>

    <!-- Category-Fragment -->
    <string name="category_apartment">Apartment</string>
    <string name="category_barber">Barber</string>
    <string name="category_car">Car</string>
...
    <string name="transactions_14">Last 14 Transactions</string>
    <string name="transactions_7">Last 7 Transactions</string>
    <string name="transactions_search">Search</string>
    <string name="transactions_search_hint">Filter Results</string>

    <!-- Transactions Activity -->
    <string name="transactions_delete_button">Delete</string>
    <string name="transactions_inspect_button">Inspect</string>

    <!-- Account Balance Activity -->
    <string name="account_delete_button">Delete</string>

    <!-- User Feedback -->
    <string name="toast_missing_input">Please provide a Amount</string>
...
